--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
 <html>
-<h1>The Pilot Suit</h1>
+  <body style="text-align:center;'>
+    <h1>The Pilot Suit</h1>
+    <img src="cover.jpg" alt="Smiley face" style="border:5px solid black;width:80vw;height:80vw;vertical-align:middle;horizontal-align:middle;">
+  </body>
 </html>
