--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <body style="text-align:center;">
-    <h1>The Pilot Suit</h1>
+<!--     <h1>The Pilot Suit</h1> -->
     <img src="/cover.jpg" style="border:5px solid black;width:80vw;height:80vw;vertical-align:middle;">
   </body>
 </html>
