--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <body style="text-align:center;">
 <!--     <h1>The Pilot Suit</h1> -->
-    <img src="/cover.jpg" style="border:15px solid black;width:0.5vh;height:0.5vh;vertical-align:middle;">
+    <img src="/cover.jpg" style="border:15px solid black;width:0.3vw;height:0.3vw;vertical-align:middle;">
   </body>
 </html>
