--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <html>
   <body style="text-align:center;">
-<!--     <h1>The Pilot Suit</h1> -->
-    <img src="cover.jpg" style="border:15px solid black;width:30vw;height:30vw;">
+    <img src="/cover.jpg" style="border:15px solid black;width:0.5vw;height:0.5vw;">
   </body>
 </html>
