--- a/index.html
+++ b/index.html
@@ -1,5 +1,15 @@
+<!DOCTYPE html>
 <html>
+  <head>
+    <style>
+      .cover {
+        border: 15px solid black;
+        width: 0.5vw;
+        height: 0.5vw;
+      }
+    </style>
+  </head>
   <body style="text-align:center;">
-    <img src="/cover.jpg" style="border:15px solid black;width:0.5vw;height:0.5vw;">
+    <img src="/cover.jpg" style="cover">
   </body>
 </html>
