--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
         width: 40vw;
         height: 40vw;
       }
+      html { 
+        background: url(images/cover.jpg) no-repeat center center fixed; 
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+      }
     </style>
   </head>
   <body style="text-align:center;">
