--- a/index.html
+++ b/index.html
@@ -8,11 +8,15 @@
         height: 40vw;
       }
       html { 
-        background: url(images/cover.jpg) no-repeat center center fixed; 
+        background: url(cover.jpg) no-repeat center center fixed; 
         -webkit-background-size: cover;
         -moz-background-size: cover;
         -o-background-size: cover;
         background-size: cover;
+      }
+      #blurb {
+         word-wrap: break-word;
+         width: 40vw;
       }
     </style>
   </head>
@@ -20,7 +24,8 @@
     <h1>The Pilot Suit</h1>
     <h3>A children's picture book for kids aged 4 to 8 years old</h3>
     <hr>
-    <p>In this charming and thought-provoking children's picture book, a little boy dreams of becoming a pilot. This dream, coupled with some chance encounters, take the little one on a journey to distant lands that brings him new friends, teaches him important life lessons and ultimately shapes his very destiny.</p>
+    <div id="blurb">In this charming and thought-provoking children's picture book, a little boy dreams of becoming a pilot. This dream, coupled with some chance encounters, take the little one on a journey to distant lands that brings him new friends, teaches him important life lessons and ultimately shapes his very destiny.
+    </div>
     <hr>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/nYj1H2Bt7x0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <hr>
