--- a/index.html
+++ b/index.html
@@ -7,16 +7,14 @@
         width: 40vw;
         height: 40vw;
       }
-      html { 
-        background: url(cover.jpg) no-repeat center center fixed; 
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
-        background-size: cover;
+      body {
+        background-color: cream;
       }
       #blurb {
          word-wrap: break-word;
          width: 40vw;
+         text-align: center;
+         font-size: 14px;
       }
     </style>
   </head>
