--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       }
       body {
         background-color: cream;
+        text-align: center;
       }
       #blurb {
          word-wrap: break-word;
@@ -18,14 +19,16 @@
       }
     </style>
   </head>
-  <body style="text-align:center;">
+  <body>
     <h1>The Pilot Suit</h1>
     <h3>A children's picture book for kids aged 4 to 8 years old</h3>
     <hr>
-    <div id="blurb">In this charming and thought-provoking children's picture book, a little boy dreams of becoming a pilot. This dream, coupled with some chance encounters, take the little one on a journey to distant lands that brings him new friends, teaches him important life lessons and ultimately shapes his very destiny.
+    <div id="blurb">
+      <p>In this charming and thought-provoking children's picture book, a little boy dreams of becoming a pilot. This dream, coupled with some chance encounters, take the little one on a journey to distant lands that brings him new friends, teaches him important life lessons and ultimately shapes his very destiny.
+      </p>
     </div>
     <hr>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/nYj1H2Bt7x0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="0.8vw" height="0.45vw" src="https://www.youtube.com/embed/nYj1H2Bt7x0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <hr>
   </body>
 </html>
