--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         background-color: cream;
         text-align: center;
       }
-      #blurb {
-         word-wrap: break-word;
+      #blurb, #links {
+         border: 15px solid black;
          width: 40vw;
          text-align: center;
          font-size: 14px;
@@ -28,7 +28,16 @@
       </p>
     </div>
     <hr>
-    <iframe width="0.8vw" height="0.45vw" src="https://www.youtube.com/embed/nYj1H2Bt7x0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="80vw" height="45vw" src="https://www.youtube.com/embed/nYj1H2Bt7x0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <hr>
+    <div id="links">
+      <p>If you wish to leave a Goodreads review of the story, <a href="https://triplican.com/tps/gdr?home">CLICK HERE</a>:
+
+      <p>If you wish to buy a copy of the book for a little someone, you can do so here (available only in the UK and Australia):
+        <br><a href="https://triplican.com/tps/uk_amz?home">BUY IN THE UNITED KINGDOM</a>
+        <br><a href="https://triplican.com/tps/au_amz?home">BUY IN AUSTRALIA</a>
+      </p>
+    </div>
     <hr>
   </body>
 </html>
