--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <iframe width="80vw" height="45vw" src="https://www.youtube.com/embed/nYj1H2Bt7x0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <hr>
     <div id="links">
-      <p>If you wish to leave a Goodreads review of the story, <a href="https://triplican.com/tps/gdr?home">CLICK HERE</a>:
+      <p>If you wish to leave a Goodreads review of the story, <a href="https://triplican.com/tps/gdr?home">CLICK HERE</a>.
 
       <p>If you wish to buy a copy of the book for a little someone, you can do so here (available only in the UK and Australia):
         <br><a href="https://triplican.com/tps/uk_amz?home">BUY IN THE UNITED KINGDOM</a>
