--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </p>
     </div>
     <hr>
-    <iframe width="80vw" height="45vw" src="https://www.youtube.com/embed/nYj1H2Bt7x0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/nYj1H2Bt7x0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <hr>
     <div id="links">
       <p>If you wish to leave a Goodreads review of the story, <a href="https://triplican.com/tps/gdr?home">CLICK HERE</a>.
