--- a/index.html
+++ b/index.html
@@ -7,14 +7,13 @@
         width: 40vw;
         height: 40vw;
       }
-      body {
+      html {
         background-color: cream;
         text-align: center;
       }
       #blurb, #links {
          border: 15px solid black;
          width: 40vw;
-         text-align: center;
          font-size: 14px;
       }
     </style>
