--- a/index.html
+++ b/index.html
@@ -7,10 +7,6 @@
         width: 40vw;
         height: 40vw;
       }
-      html {
-        background-color: cream;
-        text-align: center;
-      }
       #blurb, #links {
          border: 15px solid black;
          width: 40vw;
@@ -18,7 +14,7 @@
       }
     </style>
   </head>
-  <body>
+  <body style="background-color:cream;text-align:center;">
     <h1>The Pilot Suit</h1>
     <h3>A children's picture book for kids aged 4 to 8 years old</h3>
     <hr>
@@ -26,9 +22,9 @@
       <p>In this charming and thought-provoking children's picture book, a little boy dreams of becoming a pilot. This dream, coupled with some chance encounters, take the little one on a journey to distant lands that brings him new friends, teaches him important life lessons and ultimately shapes his very destiny.
       </p>
     </div>
-    <hr>
+    
     <iframe width="560" height="315" src="https://www.youtube.com/embed/nYj1H2Bt7x0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <hr>
+
     <div id="links">
       <p>If you wish to leave a Goodreads review of the story, <a href="https://triplican.com/tps/gdr?home">CLICK HERE</a>.
 
@@ -37,6 +33,6 @@
         <br><a href="https://triplican.com/tps/au_amz?home">BUY IN AUSTRALIA</a>
       </p>
     </div>
-    <hr>
+
   </body>
 </html>
