--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       }
     </style>
   </head>
-  <body style="background-color:cream;text-align:center;">
+  <body style="background-color:lightyellow;text-align:center;">
     <h1>The Pilot Suit</h1>
     <h3>A children's picture book for kids aged 4 to 8 years old</h3>
     
