--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
       #blurb, #links {
          border: 15px solid black;
          width: 40vw;
+         text-align: center;
          font-size: 16px;
       }
     </style>
   </head>
-  <body style="background-color:lightyellow;text-align:center;">
+  <body style="background-color:floralwhite;text-align:center;">
     <h1>The Pilot Suit</h1>
     <h3>A children's picture book for kids aged 4 to 8 years old</h3>
     
