--- a/index.html
+++ b/index.html
@@ -7,16 +7,17 @@
         width: 40vw;
         height: 40vw;
       }
-      h4 {
-         border: 5px solid black;
-      }
     </style>
   </head>
   <body style="background-color:floralwhite;text-align:center;">
     <h1>The Pilot Suit</h1>
     <h3>A children's picture book for kids aged 4 to 8 years old</h3>
     
-    <h4>In this charming and thought-provoking children's picture book, a little boy dreams of becoming a pilot. This dream, coupled with some chance encounters, take the little one on a journey to distant lands that brings him new friends, teaches him important life lessons and ultimately shapes his very destiny.
+    <h4>In this charming and thought-provoking children's picture book,<br>
+      a little boy dreams of becoming a pilot. This dream, coupled with<br>
+      some chance encounters, take the little one on a journey to<br>
+      distant lands that brings him new friends, teaches him<br>
+      important life lessons and ultimately shapes his very destiny.
     </h4>
     
     <br>
