--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
     
 <!--     <iframe width="560" height="315" src="https://www.youtube.com/embed/thQnheZ1uoU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
 
-    <h4>If you wish to leave a Goodreads review of the story, <a href="https://triplican.com/tps/gdr?home">CLICK HERE</a>.
+<!--     <h4>If you wish to leave a Goodreads review of the story, <a href="https://triplican.com/tps/gdr?home">CLICK HERE</a>.
       <br>
       <br>If you wish to buy a copy of the book for a little someone, you can do so here (available only in the UK and Australia):
       <br><a href="https://triplican.com/tps/uk_amz?home">BUY IN THE UNITED KINGDOM</a>
       <br><a href="https://triplican.com/tps/au_amz?home">BUY IN AUSTRALIA</a>
-    </h4>
+    </h4> -->
 
   </body>
 </html>
